gitpod modify to install module

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,8 @@ tasks:
     before: |
       sudo apt-get install tree
 #https://learn.microsoft.com/en-us/powershell/scripting/install/install-ubuntu?view=powershell-7.5
+#https://docs.aws.amazon.com/fr_fr/cli/latest/userguide/getting-started-install.html
+#https://docs.aws.amazon.com/powershell/latest/reference/
   - name: powershell
     before: |
       sudo apt-get update
@@ -15,6 +17,7 @@ tasks:
       sudo apt-get update
       sudo apt-get install -y powershell
       pwsh
+      Install-Module -Name AWS.Tools.Installer
 #https://docs.aws.amazon.com/fr_fr/cli/latest/userguide/getting-started-install.html
   - name: aws-cli
     env:
