--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -18,6 +18,7 @@ tasks:
       sudo apt-get install -y powershell
       pwsh
       Install-Module -Name AWS.Tools.Installer
+      Install-AWSToolsModule -Name AWS.Tools.Common, AWS.Tools.S3 -Scope CurrentUser -Force
 #https://docs.aws.amazon.com/fr_fr/cli/latest/userguide/getting-started-install.html
   - name: aws-cli
     env:
